force-app/main/default/objects/Toys__c/Toys__c.object-meta.xml
<CustomObject>
    <description>Object to capture toys for sale</description>
    <label>Toys</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Toys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>