force-app/main/default/objects/Toys__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Capture the description of the toy</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>