force-app/main/default/objects/Toys__c/listViews/All_Toys.listView-meta.xml
<ListView>
    <fullName>All_Toys</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Is_Available__c</columns>
    <columns>Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Toys</label>
</ListView>